# foodgram

./: .ruff.toml  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
backend/: .dockerignore  .ruff.toml  Dockerfile  manage.py  pyproject.toml  requirements.testing.txt  requirements.txt
backend/apps/api/: urls.py
backend/apps/common/: const.py  serializers.py  util.py
backend/apps/favorites/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/favorites/migrations/: 0001_initial.py  0002_alter_userfavorites_recipes.py
backend/apps/recipes/: admin.py  const.py  filters.py  models.py  permissions.py  serializers.py  urls.py  util.py  views.py
backend/apps/recipes/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20241023_1056.py  0004_auto_20241023_1202.py  0005_delete_favoriterecipe.py  0006_recipe_favorited_by_users.py  0007_alter_recipe_author.py  0008_shortlink.py  0009_alter_shortlink_full_url.py  0010_auto_20241023_1758.py  0011_shoppingcart.py  0012_auto_20241024_1931.py  0013_auto_20241028_2000.py  0014_auto_20241028_2017.py  0015_auto_20241029_1852.py  0016_auto_20241029_1911.py  0017_auto_20241029_1923.py  0018_alter_shoppingcart_recipes.py  (+3 more)
backend/apps/shopping_cart/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  util.py  views.py
backend/apps/short_link/: admin.py  apps.py  models.py  serializers.py  urls.py  util.py  views.py
backend/apps/subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: admin.py  const.py  models.py  serializers.py  urls.py  views.py
backend/foodgram_backend/: settings.py  urls.py
(+40 files in other folders)
