[tool.poetry]
name = "foodgram-backend"
version = "0.1.0"
description = "Backend for foodgram"
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.16"
djangorestframework = "3.12.4"
pillow = "9.0.0"
django-annoying = "^0.10.7"
django-filter = "23.5"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
